@@ -14,6 +14,8 @@
     </description>
   </info>
 
+  <theme>DefaultTheme</theme>
+
   <suite>
     <levelsuite>AncientLevelSet</levelsuite>
     <levelsuite>MonsterTestsLevelSet</levelsuite>
